--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     
       gtag('config', 'AW-17552823419');
     </script>
+    <!-- Event snippet for การซื้อ conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+          'send_to': 'AW-17552823419/-uYxCJmU35sbEPuo67FB',
+          'value': 1.0,
+          'currency': 'THB',
+          'transaction_id': ''
+      });
+    </script>
+
 </head>
 <body>
     <!-- Header -->
